Extended Lamda Example

--- a/Lambda Functions.ipynb
+++ b/Lambda Functions.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "#### Now let's use lambda functions to create some shorthand for ourselves.\n",
     "\n",
-    "Suppose there are a couple shifts that we want to use over and over in our code. Let's say we are using 5 and -5 repeatedly."
+    "Suppose there are a couple shifts that we want to use over and over in our code. Let's say our code universally uses a shift of 5 for encryption."
    ]
   },
   {
@@ -89,8 +89,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Caesar5 = lambda string: CaesarCipher(string, 5)\n",
-    "CaesarInv5 = lambda string: CaesarCipher(string, -5)"
+    "# Define the Caesar shift that we will be using\n",
+    "CaesarShift = 5\n",
+    "\n",
+    "# Define our encryption and decryption functions that will be used based on the declared value CaesarShift\n",
+    "Encrypt = lambda string: CaesarCipher(string, CaesarShift)\n",
+    "Decrypt = lambda string: CaesarCipher(string, -CaesarShift)"
    ]
   },
   {
@@ -98,7 +102,35 @@
    "id": "5a955f12",
    "metadata": {},
    "source": [
-    "With the shorthand above, we obtain both a shorter function name and a shorter list of inputs."
+    "With the shorthand above, we obtain both a shorter function name and a shorter list of inputs.\n",
+    "\n",
+    "Note that\n",
+    "```Python\n",
+    "Encrypt = lambda string: CaesarCipher(string, CaesarShift)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "stands in place of\n",
+    "\n",
+    "```Python\n",
+    "def Encrypt (string):\n",
+    "     return CaesarCipher(string, CaesarShift)\n",
+    "```\n",
+    "\n",
+    "<code style=\"color:green\">lambda</code> plays the role of <code style=\"color:green\">def</code>.\n",
+    "\n",
+    "In the abstract\n",
+    "```Python\n",
+    "FunctionName = lambda input: output\n",
+    "\n",
+    "```\n",
+    "\n",
+    "stands in place of\n",
+    "\n",
+    "```Python\n",
+    "def FunctionName (input):\n",
+    "     return output\n",
+    "```"
    ]
   },
   {
@@ -118,16 +150,63 @@
    ],
    "source": [
     "message = \"Let's say we have some message we want to hide.\"\n",
-    "secret = Caesar5(message)\n",
+    "secret = Encrypt(message)\n",
     "\n",
     "print(secret)\n",
-    "print(CaesarInv5(secret))"
+    "print(Decrypt(secret))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b409d0",
+   "metadata": {},
+   "source": [
+    "#### Let's look at an alternate way to get to the same shorthand.\n",
+    "\n",
+    "Maybe we are working with more than one Caesar shift and we want a really short and clean way to define our encryption algorithm in the moment. Perhaps we are juggling a lot of different encyption algorithms, so each one needs a nice, short, intuitive way to be called."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a3e525a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Caesar (shift):\n",
+    "    return lambda string: CaesarCipher(string, shift)\n",
+    "\n",
+    "Encrypt = Caesar(5)\n",
+    "Decrypt = Caesar(-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ed395bce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mjd ymjwj fsi mtbid! Qjy'x it xtrj jshwduynts flfns.\n",
+      "Hey there and howdy! Let's do some encryption again.\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = \"Hey there and howdy! Let's do some encryption again.\"\n",
+    "secret = Encrypt(message)\n",
+    "\n",
+    "print(secret)\n",
+    "print(Decrypt(secret))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17cd83c0",
+   "id": "06b272a5",
    "metadata": {},
    "outputs": [],
    "source": []
